fix horizontal scroll bug

--- a/src/components/home/testimonials/testimonials.scss
+++ b/src/components/home/testimonials/testimonials.scss
@@ -1,4 +1,9 @@
 /* testimonials.scss */
+body{
+    overflow-x: hidden;
+    
+}
+  
 .slick-list{
     overflow: visible !important;
 }
